First page looks swell

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,11 +7,10 @@
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This is where the color palette selector/color picker goes.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    The picker will show the <code>#hex</code> for your preferred colors.
+    You'll be able to copy colors to the clipboard easily.
   </p>
 </ion-content>
