Settings and gallery pages described

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Settings
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+<p>This is where you'll be able to adjust certain settings.</p>
+<p>These might include hex vs rgb, size of palettes, and
+accessibility settings.</p>
 </ion-content>
