--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,23 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Gallery
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
+  <p>This is where you'll put saved palettes.</p>
+  <p>Maybe, you can export them in various ways (e.g. email, cloud.)</p>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header>Gallery</ion-list-header>
+    <ion-item>
+      <ion-icon name="color-palette" item-start></ion-icon>
+      Gallery Item 1
+    </ion-item>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      Gallery Item 2
     </ion-item>
   </ion-list>
 </ion-content>
