--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Color the World!</h2>
   <p>
     This is where the color palette selector/color picker goes.
   </p>
