--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -9,9 +9,7 @@
   <p>
     This is where the color palette selector/color picker goes.
   </p>
-  <color-picker></color-picker>
-  <p>
-    The picker will show the <code>#hex</code> for your preferred colors.
-    You'll be able to copy colors to the clipboard easily.
-  </p>
+  <color-picker (onColorChange)="handleColorChange($event)"></color-picker>
+  <p>Your chosen color: <code>{{currentColor}}</code></p>
+  <p>You'll be able to copy colors to the clipboard easily.</p>
 </ion-content>
