--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -12,4 +12,6 @@
   <color-picker (onColorChange)="handleColorChange($event)"></color-picker>
   <p>Your chosen color: <code>{{currentColor}}</code></p>
   <p>HSV: <code *ngIf="hsvColor">{{hsvColor[0]}} {{hsvColor[1]}} {{hsvColor[2]}}</code></p>
+  <p>Hue variants:</p>
+  
 </ion-content>
