--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -12,8 +12,11 @@
   <color-picker (onColorChange)="handleColorChange($event)"></color-picker>
   <p>Your chosen color: <code>{{currentColor}}</code></p>
   <p>HSV: <code *ngIf="hsvColor">{{hsvColor[0]}} {{hsvColor[1]}} {{hsvColor[2]}}</code></p>
+  <button ion-button (click)="saveColors()">Save Colors</button>
   <p>Hue variants:</p>
   <div *ngFor="let color of variants">
     <code>color:</code> {{color}} <div [style.background-color]="color" class="smallbox"></div>
   </div>
+
+
 </ion-content>
