First attempt at gallery

--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -7,7 +7,7 @@
 <ion-content padding>
   <h2>Color the World!</h2>
   <p>
-    This is where the color palette selector/color picker goes.
+    Pick a color; save a collection of related colors.
   </p>
   <color-picker (onColorChange)="handleColorChange($event)"></color-picker>
   <p>Your chosen color: <code>{{currentColor}}</code></p>
