Settings page remembers your current max size setting

--- a/src/pages/gallery/gallery.html
+++ b/src/pages/gallery/gallery.html
@@ -14,7 +14,7 @@
       <ion-icon name="color-palette" item-start></ion-icon>
       Palette based on {{palette[0]}}:
       <div *ngFor="let color of palette">
-        <code>color:</code> {{color}} <div [style.background-color]="color" class="smallbox"></div>
+        <code>color:</code> {{color}} <div [style.background-color]="color" class="gallerybox"></div>
       </div>
 
     </ion-item>
